# int_console

./: .gitattributes  .gitignore  README.md  get_submission.py  model.py  pyproject.toml  requirements.txt  settings.py
adaptate_vosk/: Dockerfile.kaldi-vosk-model-022-ru  README.md  extra.txt  install_liblbfgs.sh  run.sh  update_corpus_022.sh
notebooks/: generated.csv  trans_text_all.csv  Порождение_аугментированных_команд.ipynb  Работа_с_текстом_и_ключ_словами.ipynb
utils/: get_datasets.sh  unpack_models.sh
validation/: validation_data_with_transcriptions.csv
